# python-tutorial

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: api_schema.py  crud.py  database.py  dependencies.py  initial_db.py  main.py  models.py  pydantic_schema.py  schema.py
app/api/: dependencies.py  deps.py  main.py
app/api/routers/: login.py  users.py
app/core/: config.py  security.py
app/db/: pydantic_model.py
app/routers/: adduser.py  getuser.py  greeting.py  users_management.py
app/test/: greeting_test.py
greeting/: __init__.py  greeting.py
main/: main.py
test/: main_test.py
