[tool.poetry]
name = "python-tutorial"
version = "0.1.0"
description = "Just a simple Hello-World module"
authors = ["tungtv"]
license = "N/A"
readme = "README.md"
packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
dnspython = "^2.6.1"
pymongo = "^4.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
coverage = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
